--- a/WebApiShop/wwwroot/home.html
+++ b/WebApiShop/wwwroot/home.html
@@ -31,9 +31,9 @@
         <div class="cont">
             <form class="existUser">
                 <h3>משתמש רשום</h3>
-                <lable for="RuserName">שם משתמש</lable>
+                <label for="RuserName">שם משתמש</label>
                 <input type="email" id="RuserName" required />
-                <lable for="Rpassword">סיסמא</lable>
+                <label for="Rpassword">סיסמא</label>
                 <input type="password" id="Rpassword" required />
                 <button type="button" onClick="signIn()">שליחה</button>
             </form>
